--- a/index.css
+++ b/index.css
@@ -3,3 +3,52 @@
 * {
     font-family: 'Work Sans', sans-serif;
 }
+
+/*header styles*/
+header{
+    background-color: rgb(248, 233, 216);
+    padding: 50px 240px;
+}
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+
+}
+nav > h2 {
+    color: rgb(50, 32, 32);
+        font-size: 2rem;
+        font-weight: 700px;
+}
+
+
+nav > ul {
+    display: flex;
+    text-decoration: none;
+   
+}
+nav > ul > li{
+    list-style: none;
+    margin-right: 30px;
+    font-weight: 700;
+    font-size: 1rem;
+} 
+/*banner style*/
+
+.banner-content{
+    max-width: 800px;
+    text-align: center;
+    margin: 0% auto;
+}
+.banner title{
+    font-size: 4rem;
+    font-weight: 700;
+
+}
+  .btn-primary{
+    background-color: rgb(237, 170, 82);
+   width: 100px;
+   height: 40px;
+    color:red;
+  }
