--- a/index.css
+++ b/index.css
@@ -48,7 +48,33 @@ nav > ul > li{
 }
   .btn-primary{
     background-color: rgb(237, 170, 82);
-   width: 100px;
-   height: 40px;
+  border-radius: 3px;
     color:red;
+    padding: 20px 25px;
+    cursor: pointer;
   }
+  .banner img {
+    width: 100%;
+    margin-top: 25px;
+  }
+  /* Responsive media quiry*/
+  /*mobile device*/
+   @media screen and (max-width:576px){
+      header{
+        padding: 20px;
+      }
+      nav{
+        flex-direction: column;
+      }
+   }
+    /*tablet or medium device*/
+
+    @media screen and (min-width:576px) and (max-width:960px){
+        header{
+            padding: 50px;
+          }
+          nav{
+            flex-direction: column;
+          }
+    }
+  
