--- a/index.css
+++ b/index.css
@@ -63,6 +63,7 @@ nav > ul > li{
   .teams-container{
     display: flex;
     align-items: center;
+    padding: 70px;
   }
   .teams-img-container{
     display: grid;
@@ -73,7 +74,64 @@ nav > ul > li{
   padding-left: 100px;
   padding-right: 50px;
  }
+/*facts section*/
+.facts-card-container{
+  display: flex;
+  justify-content: space-around;
+  
+}
+.facts-card-container .card {
+  border: 2px solid rgb(237, 170, 82);
+  padding: 20px 20px;
+  text-align: center;
+}
+/*mid section*/
+.mid-content{
+  display: flex;
+  margin-top: 130px;
+  margin-left: 80px;
+  margin-right: 40px;
+  gap: 100px;
+  
+}
+.mid-content-img img{
+  height: 700px;
+  margin-left: 150px;
+}
+.ten-year-badg{
+  background-color: rgb(219, 233, 94);
+  width: 300px;
+  height: 200px;
+  text-align: center;
+  padding-top: 60px;
+ position: relative;
+ bottom: 110px;
+ right: 100px;
+ left: 50px;
+ border-radius: 5px;
+}
 
+/*sponser section*/
+.sponsers{
+  text-align: center;
+  margin-top: 100px;
+}
+.sponser-img{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+  
+}
+/*fotter*/
+.fotter-text{
+  
+  text-align: center;
+  background-color: antiquewhite;
+  border: 1px solid black;
+   height: 100px;
+   margin: 200px;
+  padding-top: 60px;
+}
 
   /* Responsive media quiry*/
   /*mobile device*/
@@ -81,9 +139,40 @@ nav > ul > li{
       header{
         padding: 20px;
       }
-      nav{
+      nav ,
+       .teams-container,
+       .facts, 
+       .facts-card-container,
+       .mid-content,
+       .sponser-img{
         flex-direction: column;
       }
+      .teams-img-container{
+        grid-template-columns: 1fr;
+      }
+      .facts-card-container{
+      gap: 20px;
+      }
+      .mid-content-img img{
+        height: 500px;
+        width: 300px;
+       margin-left:0px;
+       
+      }
+      .ten-year-badg{
+     position: static;
+     max-width: 250px;
+      }
+      .sponser-img{
+        width: 199px;
+        margin-left: auto;
+        margin-right: auto;
+        gap: 30px;
+      }
+.fotter-text{
+      margin: 0px;
+      margin-top: 70px;
+
    }
     /*tablet or medium device*/
 
@@ -91,8 +180,23 @@ nav > ul > li{
         header{
             padding: 50px;
           }
-          nav{
+          nav,
+          .teams-container,
+          .sponser-img,
+          .mid-content,
+          .mid-content-img
+          {
             flex-direction: column;
+            
           }
+          .sponser-img{
+            width: 199px;
+            margin-left: auto;
+            margin-right: auto;
+            gap: 30px;
+          }
+          .fotter-text{
+            margin: 0px;
+            margin-top: 70px;
     }
 
